--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -1,8 +1,14 @@
+body, html{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+}
 header {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 70px;
-    background: rgba(0,0,0,0.1);
+	background: rgb(200,200,200);
     z-index: 100;
     transition: 1s;
 }
@@ -37,7 +43,7 @@ header h3 {
 }
 .TE_header_left p {
     float: right;
-    margin: 2 0 0 20;
+    margin: 2px 0px 0px 20px;
     font-size: 42px;
 }
 
@@ -46,7 +52,7 @@ header h3 {
 }
 .TE_header_right p {
     float: left;
-    margin: 25 20 0 0;
+    margin: 25px 20px 0px 0px;
     font-size: 12px;
 }
 
@@ -60,13 +66,13 @@ header h3 {
 }
 
 .TE_header_slider_menus {
-    margin: 0 auto;
-    width: 1280;
+    margin: 0px auto;
+    width: 1280px;
 }
 
 .TE_header_slider_menu {
     float: left;
-    margin: 0 16;
+    margin: 0px 16px;
     width: 150px;
     height: 100%;
     text-align: center;
