--- a/TalentEducation/src/main/webapp/resources/css/footer.css
+++ b/TalentEducation/src/main/webapp/resources/css/footer.css
@@ -1,14 +1,15 @@
 footer {
     width: 100%;
-    height: 100px;
     background: black;
-}
-
-
-footer p {
-    padding-top: 10px;
     color: white;
 }
-footer div {
-    text-align: center;
+
+.footer_img{
+    margin-right: 8px;
+    width: 32px;
+    height: 32px;
+}
+
+footer p{
+    margin: 0px;
 }
