--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -8,13 +8,13 @@ header {
     position: fixed;
     width: 100%;
     height: 70px;
-	background: rgb(200,200,200);
+	background: rgb(50,50,50);
     z-index: 100;
     transition: 1s;
 }
 header a {
     text-decoration: none;
-    color: rgb(50,50,50);
+    color: white;
     font-weight: bold;
     transition: 400ms;
 }
@@ -88,8 +88,4 @@ header h3 {
 
 .TE_header_slider_menu > a:hover {
     color: tomato;
-}
-
-header:hover {
-    background: white;
 }
