--- a/TalentEducation/src/main/webapp/resources/css/mypage.css
+++ b/TalentEducation/src/main/webapp/resources/css/mypage.css
@@ -27,47 +27,36 @@ section {
 	border: 5px solid rgba(0,0,0,0);
 	border-bottom: 3px solid rgb(80,80,80);
 }
-.TE_mypage_nav:nth-last-child(1) { border-bottom: 0px; }
-
-
-.TE_mypage_nav img {
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-}
-
-.TE_mypage_nav h3 {
-	margin: 0px;
-	font-size: 28px;
-}
-.TE_mypage_nav:nth-child(1) h3 { text-align: center; }
-.TE_mypage_nav:nth-child(n+2) h3{ margin: 0px 0px 15px 5px; }
-
-.TE_mypage_nav a {
-	display: block;
-	text-decoration: none;
-	color: rgb(60,60,60);
-	font-size: 15px;
-	font-weight: bold;
-}
-.TE_mypage_nav:nth-child(1) a { text-align: center; font-size: 20px; color: rgb(120,120,120); }
-.TE_mypage_nav:nth-child(n+2) a{ margin: 0px 0px 5px 20px; }
+	.TE_mypage_nav:nth-last-child(1) { border-bottom: 0px; }
+	
+	.TE_mypage_nav img { width: 200px; height: 200px; border-radius: 50%; }
+	
+	.TE_mypage_nav h3 { margin: 0px; font-size: 28px; }
+	.TE_mypage_nav:nth-child(1) h3 { text-align: center; }
+	.TE_mypage_nav:nth-child(n+2) h3{ margin: 0px 0px 15px 5px; }
+	
+	.TE_mypage_nav a {
+		display: block;
+		text-decoration: none;
+		color: rgb(60,60,60);
+		font-size: 15px;
+		font-weight: bold;
+	}
+	.TE_mypage_nav:nth-child(1) a { text-align: center; font-size: 20px; color: rgb(120,120,120); }
+	.TE_mypage_nav:nth-child(n+2) a{ margin: 0px 0px 5px 20px; }
 
 
 
 
-.TE_mypage_nav_btn {
-	text-align: center;
-}
-
-.TE_mypage_nav_btn input {
-	margin: 10px;
-	border-radius: 10%;
-	width: 60px;
-	height: 30px;
-	font-weight: bold;
-	color: white;
-	cursor: pointer;
-}
-.TE_mypage_nav_btn input:nth-child(1) { border-color: red; background: red; }
-.TE_mypage_nav_btn input:nth-child(2) { border-color: rgb(255, 196, 31); background: rgb(255, 196, 31); }
+.TE_mypage_nav_btn { text-align: center; }
+	.TE_mypage_nav_btn input {
+		margin: 10px;
+		border-radius: 10%;
+		width: 60px;
+		height: 30px;
+		font-weight: bold;
+		color: white;
+		cursor: pointer;
+	}
+	.TE_mypage_nav_btn input:nth-child(1) { border-color: red; background: red; }
+	.TE_mypage_nav_btn input:nth-child(2) { border-color: rgb(255, 196, 31); background: rgb(255, 196, 31); }
