--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -6,6 +6,8 @@ body, html{
 }
 
 
+form { margin: 0px; }
+
 
 header {
     position: fixed;
@@ -20,6 +22,7 @@ header {
 	    color: white;
 	    font-weight: bold;
 	    transition: 400ms;
+	    cursor: pointer;
 	}
 	
 	header img {
