--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -2,7 +2,7 @@ body, html{
     margin: 0px;
     padding: 0px;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 
@@ -11,6 +11,7 @@ form { margin: 0px; }
 
 header {
     position: fixed;
+    top: 0px;
     width: 100%;
     height: 70px;
 	background: rgb(50,50,50);
