--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -96,6 +96,26 @@ header {
 	transition: 1s;
 }
 
+#TE_header_loginform {
+	position: fixed;
+	display: none;
+	top: 20%;
+	left: 40%;
+	width: 500px;
+	height: 500px;
+	background: white;
+	z-index: 110;
+}
+
+#allback {
+	position: fixed;
+	display: none;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+	z-index: 101;
+}
+
 
 
 .TE_header_slider_menu > a:hover {
