--- a/TalentEducation/src/main/webapp/resources/css/header.css
+++ b/TalentEducation/src/main/webapp/resources/css/header.css
@@ -87,7 +87,14 @@ header {
 		}
 
 
-
+#loading {
+	position: fixed;
+	display: none;
+	top: 35%;
+	left: 50%;
+	z-index: 110;
+	transition: 1s;
+}
 
 
 
