--- a/TalentEducation/src/main/webapp/resources/css/home.css
+++ b/TalentEducation/src/main/webapp/resources/css/home.css
@@ -1,3 +1,7 @@
+#main{
+
+	}
+
 section:nth-child(1) {
 	width: 100%;
 	height: 100%;
@@ -18,3 +22,76 @@ section:nth-child(4) {
 	height: 100%;
 	background: orange;
 }
+
+
+* {
+	text-align: center;
+
+	}
+    ul,li {
+    	list-style:none;
+    }
+    .slide {
+    	width: 98%;
+    	overflow:hidden;
+    	position:relative;
+    }
+    
+    .sllide img{
+    	width: 80%;
+    	height: 70%;
+    }
+    
+    .slide ul{
+    	width:calc(100% * 4);
+    	display:flex;
+    	transition:1s;
+    }
+    .slide li{
+    	width:calc(100% / 4);
+    	height:600px;
+    }
+    .slide li:nth-child(1){background:#aaf;}
+    .slide li:nth-child(2){background:#faa;}
+    .slide li:nth-child(3){background:#afa;}
+    .slide li:nth-child(4){background:#ffa;}
+    .slide input{display:none;}
+    .slide .bullet{
+	    position:absolute;
+	    bottom:20px;
+	    left:0;
+	    right:0;
+	    text-align:center;
+	    z-index:10;
+    }
+    .slide .bullet label{
+	    width:10px;
+	    height:10px;
+	    border-radius:10px;
+	    border:2px solid #666;
+	    display:inline-block;
+	    background:#fff;
+	    font-size:0;
+	    transition:0.5s;
+	    cursor:pointer;
+    }
+    
+    /* 슬라이드 조작 */
+    #pos1:checked ~ ul{margin-left:0;}
+    #pos2:checked ~ ul{margin-left:-100%;}
+    #pos3:checked ~ ul{margin-left:-200%;}
+    #pos4:checked ~ ul{margin-left:-300%;}
+    
+    /* bullet 조작 */
+    #pos1:checked ~ .bullet label:nth-child(1),
+    #pos2:checked ~ .bullet label:nth-child(2),
+    #pos3:checked ~ .bullet label:nth-child(3),
+    #pos4:checked ~ .bullet label:nth-child(4){background:#666;}
+    
+    .section2{
+    	text-align:center;
+    	width:200px;
+    	height:300px;
+    	margin: auto 0;
+    
+    }
