--- a/TalentEducation/src/main/webapp/resources/css/home.css
+++ b/TalentEducation/src/main/webapp/resources/css/home.css
@@ -89,9 +89,31 @@ section:nth-child(4) {
     #pos4:checked ~ .bullet label:nth-child(4){background:#666;}
     
     .section2{
-    	text-align:center;
-    	width:200px;
-    	height:300px;
+    	width:100px;
+    	height:100px;
     	margin: auto 0;
     
     }
+    
+    #section3{
+    	text-align: center;
+    	vertical-align: cencet;
+    }
+    
+    .section4{
+    	width: calc(60% / 4);
+    	height: 300px;
+    }
+    
+    
+    #bookSite{
+    	position:absolute; 
+    	bottom:0px;
+
+	    text-align: center; 
+	    background-color: white; 
+	    height: 30%;
+	    width: 100%;
+	    
+    }
+
