--- a/TalentEducation/src/main/webapp/resources/css/home.css
+++ b/TalentEducation/src/main/webapp/resources/css/home.css
@@ -5,51 +5,44 @@
 section:nth-child(1) {
 	width: 100%;
 	height: 100%;
-	background: steelblue;
 }
 section:nth-child(2) {
 	width: 100%;
 	height: 100%;
-	background: tomato;
 }
 section:nth-child(3) {
 	width: 100%;
 	height: 100%;
-	background: lime;
 }
 section:nth-child(4) {
 	width: 100%;
 	height: 100%;
-	background: orange;
 }
 
-
-* {
-	text-align: center;
-
-	}
     ul,li {
     	list-style:none;
     }
     .slide {
-    	width: 98%;
+    	width: 100%;
+    	height: 100%;
     	overflow:hidden;
     	position:relative;
     }
     
-    .sllide img{
-    	width: 80%;
-    	height: 70%;
+    .slide img{
+    	width: 100%;
+    	height: 100%;
     }
     
     .slide ul{
+    	padding: 0px;
     	width:calc(100% * 4);
     	display:flex;
     	transition:1s;
     }
     .slide li{
     	width:calc(100% / 4);
-    	height:600px;
+    	height: 100vh;
     }
     .slide li:nth-child(1){background:#aaf;}
     .slide li:nth-child(2){background:#faa;}
@@ -65,9 +58,9 @@ section:nth-child(4) {
 	    z-index:10;
     }
     .slide .bullet label{
-	    width:10px;
-	    height:10px;
-	    border-radius:10px;
+	    width:20px;
+	    height:20px;
+	    border-radius:20px;
 	    border:2px solid #666;
 	    display:inline-block;
 	    background:#fff;
