--- a/TalentEducation/src/main/webapp/resources/css/mypage.css
+++ b/TalentEducation/src/main/webapp/resources/css/mypage.css
@@ -1,8 +1,19 @@
+body{
+		background-image: url('../images/panbackimg.png');
+	background-size: 100% 100%;
+}
 #mypage_form {
+
 	margin: 70px auto 120px auto;
 	width: 1280px;
 	height: 1100px;
+	
 }
+::-webkit-scrollbar {
+
+display:none;
+
+} 
 
 nav {
 	float: left;
@@ -29,6 +40,7 @@ section {
 	.TE_mypage_nav img { width: 200px; height: 200px; border-radius: 50%; }
 	
 	.TE_mypage_nav h3 { margin: 0px; font-size: 28px; text-align: center; }
+	.TE_mypage_nav h4 { margin: 0px; font-size: 15px; text-align: center; height:25px; }
 	
 	.TE_mypage_nav a {
 		display: block;
