--- a/CHAT/public/css/chattingroom.css
+++ b/CHAT/public/css/chattingroom.css
@@ -25,7 +25,7 @@ html, body{
 }
 
 #infoDiv{
-    background-color: violet;
+    background-color: aliceblue;
     width: 80%;
     height: 15%;
     float: left;
@@ -42,6 +42,8 @@ html, body{
     height: 15%;
     overflow: auto;
     word-break: break-all;
+    font-size: x-large;
+    text-align: center;
 }
 
 #chatMessages{
@@ -80,4 +82,8 @@ html, body{
     height: 20%;
     position: relative;
     top: 40%;
+}
+
+dt{
+    color: darkviolet;
 }
