--- a/CHAT/views/chattingroom.ejs
+++ b/CHAT/views/chattingroom.ejs
@@ -35,6 +35,7 @@
                     <button id="btn-end">end</button>
                     <button id="btn-camera">Camera Pause</button>
                     <button id="btn-mic">Mic Mute</button>
+                    <button id="btn-mirror">좌우반전</button>
                 </div>
 <%
             } else {
