--- a/TalentEducation/src/main/webapp/resources/css/full-page-scroll.css
+++ b/TalentEducation/src/main/webapp/resources/css/full-page-scroll.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 .dots {	
-	z-index: 1;
+	z-index: 11;
 	list-style: none;
 	padding: 0;
 	position: absolute;	
@@ -45,7 +45,7 @@ body, html {
 	position: absolute;
 	width: 8px;
 	height: 8px;
-	background: rgba(255, 255, 255, 0.48);
+	background: rgba(200, 255, 255, 0.9);
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	-ms-border-radius: 10px;
@@ -65,7 +65,7 @@ body, html {
 	height: 14px;
 	margin-top: -4px;
 	left: 7px; 
-	background-color: white;
+	background-color: #ff80ff;
 	-webkit-transform: scale(1.0);
 	-moz-transform: scale(1.0);
 	-ms-transform: scale(1.0);
