--- a/TalentEducation/src/main/webapp/resources/css/home.css
+++ b/TalentEducation/src/main/webapp/resources/css/home.css
@@ -54,6 +54,7 @@ section:nth-child(4) {
 	    bottom:20px;
 	    left:0;
 	    right:0;
+	    top: 93%;
 	    text-align:center;
 	    z-index:10;
     }
@@ -61,7 +62,7 @@ section:nth-child(4) {
 	    width:20px;
 	    height:20px;
 	    border-radius:20px;
-	    border:2px solid #666;
+	    border:2px solid darkgray;
 	    display:inline-block;
 	    background:#fff;
 	    font-size:0;
@@ -79,7 +80,7 @@ section:nth-child(4) {
     #pos1:checked ~ .bullet label:nth-child(1),
     #pos2:checked ~ .bullet label:nth-child(2),
     #pos3:checked ~ .bullet label:nth-child(3),
-    #pos4:checked ~ .bullet label:nth-child(4){background:#666;}
+    #pos4:checked ~ .bullet label:nth-child(4){background:darkgray;}
     
     .section2{
     	width:100px;
@@ -95,7 +96,7 @@ section:nth-child(4) {
     
     .section4{
     	width: calc(60% / 4);
-    	height: 300px;
+    	height: 230px;
     }
     
     
@@ -108,5 +109,13 @@ section:nth-child(4) {
 	    height: 30%;
 	    width: 100%;
 	    
+    }
+    #section2IMG{
+     	background-image: url(../images/section2.jpg);
+	    background-size: 100% 100%;
+	    width: 90%;
+	    height: 90%;
+	    margin-left: 6%;
+	    margin-top: 3%;
     }
 
